changed redis values

--- a/infrastructure/redis/values.yaml
+++ b/infrastructure/redis/values.yaml
@@ -5,10 +5,16 @@ cluster:
   enabled: false
 master:
   persistence:
-    enabled: false
+    size: 2Gi
+    enabled: true
+  nodeSelector:
+    kubernetes.io/os: linux
 replica:
   persistence:
-    enabled: false
+    size: 2Gi
+    enabled: true
+  nodeSelector:
+    kubernetes.io/os: linux
 
 volumePermissions:
   enabled: true
