added nodeselector to nginx

--- a/infrastructure/nginx/release.yaml
+++ b/infrastructure/nginx/release.yaml
@@ -25,3 +25,6 @@ spec:
       type: NodePort
     ingressClassResource:
       name: nginx
+    controller:
+      nodeSelector:
+        kubernetes.io/os: linux
